Replace deprecated boxed primiative constructors with updated replacements
https://bugs.openjdk.org/browse/JDK-8254324